--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,19 @@
 {
   "name": "Spacecamp",
-  "version": "1.1",
-  "description": "Task estimation for basecamp 3 with timechimp integration",
+  "version": "1.1.2",
+  "description": "Includes task estimation, label support and connection to timechimp for your basecamp project management tool.",
   "manifest_version": 2,
   "browser_action": {
     "name": "Manipulate DOM",
-    "icons": ["icon.png"],
     "default_icon": "icon.png"
   },
   "content_scripts": [ {
+    "run_at": "document_idle",
     "js": [ "jquery-2.0.2.min.js", "background.js" ],
     "css": ["customStyles.css"],
     "matches": [ "https://3.basecamp.com/*", "https://app.timechimp.com/*"]
-  }]
+  }],
+  "web_accessible_resources": [
+    "*.png"
+  ]
 }
