--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Spacecamp",
-  "version": "1.1.4",
-  "description": "Includes task estimation, label support and connection to timechimp for your basecamp project management tool.",
+  "version": "1.1.5",
+  "description": "Extra project management while using Basecamp 3.",
   "manifest_version": 2,
   "browser_action": {
     "name": "Manipulate DOM",
