--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,17 @@
 {
+  "manifest_version": 3,
   "name": "Spacecamp",
-  "version": "1.3.0",
-  "description": "Extra project management power for Basecamp 3 and Timechimp users.",
-  "manifest_version": 2,
-  "browser_action": {
-    "name": "Manipulate DOM",
+  "version": "1.5.0",
+  "description": "Extra project management power for Basecamp 3, Helpscout and Timechimp users.",
+  "permissions": ["activeTab"],
+  "content_scripts": [
+    {
+      "matches": [ "https://3.basecamp.com/*", "https://secure.helpscout.net/conversation/*"],
+      "js": ["contentScript.js"],
+      "run_at": "document_idle"
+    }
+  ],
+  "action": {
     "default_icon": "icon.png"
-  },
-  "content_scripts": [ {
-    "run_at": "document_idle",
-    "js": [ "jquery-2.0.2.min.js", "background.js" ],
-    "css": ["customStyles.css"],
-    "matches": [ "https://3.basecamp.com/*", "https://app.timechimp.com/*", "https://secure.helpscout.net/conversation/*"]
-  }],
-  "web_accessible_resources": [
-    "*.png"
-  ]
+  }
 }
