--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Spacecamp",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Extra project management power for Basecamp 3, Helpscout and Timechimp users.",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "clipboardWrite"],
   "content_scripts": [
     {
       "matches": [ "https://3.basecamp.com/*", "https://secure.helpscout.net/conversation/*"],
@@ -12,6 +12,7 @@
     }
   ],
   "action": {
-    "default_icon": "icon.png"
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   }
 }
